--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon.ico">
-  <title>React App</title>
+  <title>Clicky-Game</title>
 </head>
 
 <body>
